*** New: Added Timer and Alert for Panic Attack.
*** New: Added Alert for Panic Attack duration.
** Isskal
*** Converted to new engine.
*** New: Added Alert for Ice Shard.
*** New: Added Timer until Whirlpool.
*** New: Added Alert for Whirlpool starting.
*** New: Added duration Timers for both Clockwise and Anti-clockwise running.
*** New: Added Timer until Glacial Wave start.
** Priestess Hydriss
*** Converted to new engine.
* French Translation
** New: Added Soulrenders Grasp.
** Fixed: Duke Letareus in Prince Hylas encounter.
* German Translations
** Fixed: Duke Letareus in Prince Hylas ecnotuner.
** New: Various Options translated.
** Matrone Zamira
*** New: Adds spawnen.
*** New: Spiritual Exhaustion ausgelaufen!
** Vladmal Prime
*** Change: Uralte Flammen
** Estrode
*** Change: Herrin des Risses.
** Grugonim
*** New: Herzstillstandsgift.
** Inquisitor Garau
*** New: Gletscherschild.
** Inwar Dunkelflut
*** New: Sog.
*** New: Faulkriefer.
*** New: Stinkender Schleim.
*** New: Krabbelklauen-Zämker.
*** New: Gezeitenbewahrer.
** Akylios
*** New: Geistiger Verfall.
*** New: Hauch des Wahnsinns.
*** New: Erstickungskugel.
*** New: Akylios taucht auf.
*** New: Akylios taucht unter.
*** New: Warnung für Flutwellen 5 Sekunden vorher.
** Plutonus
*** New: Wandelnder Schlaf.
** Herold Gaurath
*** New: Odem der Leere.
*** New: Erweckung der Toten.
*** New: Leidvolle Kunde.
** Alsbeth die Streitsuchende
*** New: Seelenbestrafung.
*** New: Boden der Zwietracht.
*** New: Zwietracht Explosion.
*** New: Seelenzerstörung.
*** New: Zwietracht-Meteor.
*** New: Zwietracht-Säule.
*** New: Seelen-Vorbote.
*** New: Seelen-Dieb.
*** New: Seelen-Magus.
** Prinz Hylas
*** Change: Ansteckender Baumwollschwanz.
** Fürst Grünschuppe
*** Change: Würgende Plage.
** Überfallkommandant Jorb
*** New: Machtvoller Schlag.
*** New: Stillgestanden!.
** General Silgen
*** New: Hitzetrichter.
*** New: Verbrennen.
*** New: In Flammen verankert.
** Joloral Wutflut
*** New: Plattenverkrüppler.