@@ -15,6 +15,8 @@ local HH = {
 	Instance = DH.Name,
 	Lang = {},
 	ID = "Hydriss",
+	PhaseObjects = {},
+	Phase = 1,
 	Enrage = 60 * 12,
 	}
 
@@ -24,6 +26,8 @@ HH.Hydriss = {
 	Active = false,
 	Name = "High Priestess Hydriss",
 	NameShort = "Hydriss",
+	TimersRef = {},
+	AlertsRef = {},
 	Menu = {},
 	Dead = false,
 	Available = false,
@@ -31,6 +35,16 @@ HH.Hydriss = {
 	Triggers = {},
 	Settings = {
 		CastBar = KBM.Defaults.CastBar(),
+		TimersRef = {
+			Enabled = true,
+			AirFirst = KBM.Defaults.TimerObj.Create("dark_green"),
+			Tsunami = KBM.Defaults.TimerObj.Create("blue"),
+			SeaFirst = KBM.Defaults.TimerObj.Create("dark_green"),
+			Sea = KBM.Defaults.TimerObj.Create("dark_green"),
+		},
+		AlertsRef = {
+			Enabled = true,
+		},
 	},
 }
 
@@ -38,6 +52,35 @@ KBM.RegisterMod(HH.ID, HH)
 
 HH.Lang.Hydriss = KBM.Language:Add(HH.Hydriss.Name)
 HH.Lang.Hydriss.German = "Hohepriesterin Hydriss"
+
+-- Ability Dictionary
+HH.Lang.Ability = {}
+HH.Lang.Ability.Tsunami = KBM.Language:Add("Tsunami")
+
+-- Mechanic Dictionary
+HH.Lang.Mechanic = {}
+HH.Lang.Mechanic.Air = KBM.Language:Add("Air Phase")
+
+-- Unit Dictionary
+HH.Lang.Unit = {}
+HH.Lang.Unit.Sea = KBM.Language:Add("Seaspawn")
+HH.Lang.Unit.Hive = KBM.Language:Add("Seaclaw Hive")
+
+HH.Seaspawn = {
+	Mod = HH,
+	Level = "??",
+	Active = false,
+	Name = HH.Lang.Unit.Sea[KBM.Lang],
+	Menu = {},
+	Dead = false,
+	Ignore = true,
+	Available = false,
+	UnitID = nil,
+}
+
+HH.Hive = {
+
+}
 
 HH.Hydriss.Name = HH.Lang.Hydriss[KBM.Lang]
 
@@ -55,6 +98,11 @@ function HH:InitVars()
 		Enabled = true,
 		CastBar = self.Hydriss.Settings.CastBar,
 		EncTimer = KBM.Defaults.EncTimer(),
+		MechTimer = KBM.Defaults.MechTimer(),
+		Alerts = KBM.Defaults.Alerts(),
+		TimersRef = self.Hydriss.Settings.TimersRef,
+		AlertsRef = self.Hydriss.Settings.AlertsRef,
+		PhaseMon = KBM.Defaults.PhaseMon(),
 	}
 	KBMDHHH_Settings = self.Settings
 	chKBMDHHH_Settings = self.Settings
@@ -105,6 +153,16 @@ function HH:RemoveUnits(UnitID)
 	return false
 end
 
+function HH.SpawnStart()
+	HH.PhaseObjects.Sea = HH.PhaseObj.Objectives:AddPercent(HH.Seaspawn.Name, 0, 100)
+	HH.PhaseObj:SetPhase("Seaspawn")
+end
+
+function HH.SpawnEnd()
+	HH.PhaseObj.Objectives.Remove(HH.PhaseObjects.Sea)
+	HH.PhaseObj:SetPhase("Ground")
+end
+
 function HH:Death(UnitID)
 	if self.Hydriss.UnitID == UnitID then
 		self.Hydriss.Dead = true
@@ -126,6 +184,12 @@ function HH:UnitHPCheck(uDetails, unitID)
 					self.Hydriss.Dead = false
 					self.Hydriss.Casting = false
 					self.Hydriss.CastBar:Create(unitID)
+					KBM.MechTimer:AddStart(self.Hydriss.TimersRef.AirFirst)
+					KBM.MechTimer:AddStart(self.Hydriss.TimersRef.SeaFirst)
+					self.PhaseObj:Start(self.StartTime)
+					self.PhaseObj.Objectives:AddPercent(self.Hydriss.Name, 0, 100)
+					self.PhaseObj:SetPhase("Ground")
+					self.Phase = 1
 				end
 				self.Hydriss.UnitID = unitID
 				self.Hydriss.Available = true
@@ -141,6 +205,8 @@ function HH:Reset()
 	self.Hydriss.UnitID = nil
 	self.Hydriss.Dead = false
 	self.Hydriss.CastBar:Remove()
+	self.PhaseObj:End(Inspect.Time.Real)
+	self.Phase = 1
 end
 
 function HH:Timer()
@@ -176,6 +242,21 @@ function HH:DefineMenu()
 end
 
 function HH:Start()
+	-- Create Timers
+	self.Hydriss.TimersRef.AirFirst = KBM.MechTimer:Add(self.Lang.Mechanic.Air[KBM.Lang], 87)
+	self.Hydriss.TimersRef.Tsunami = KBM.MechTimer:Add(self.Lang.Ability.Tsunami[KBM.Lang], 10)
+	self.Hydriss.TimersRef.SeaFirst = KBM.MechTimer:Add(self.Lang.Unit.Sea[KBM.Lang], 20)
+	self.Hydriss.TimersRef.Sea = KBM.MechTimer:Add(self.Lang.Unit.Sea[KBM.Lang], 180, true)
+	self.Hydriss.TimersRef.SeaFirst:AddTimer(self.Hydriss.TimersRef.Sea, 0)
+	KBM.Defaults.TimerObj.Assign(self.Hydriss)
+	
+	-- Create Alerts
+	
+	-- Assign Timers and Alerts to triggers.
+	self.Hydriss.Triggers.Tsunami = KBM.Trigger:Create(self.Lang.Ability.Tsunami[KBM.Lang], "cast", self.Hydriss)
+	self.Hydriss.Triggers.Tsunami:AddTimer(self.Hydriss.TimersRef.Tsunami)
+	
 	self.Hydriss.CastBar = KBM.CastBar:Add(self, self.Hydriss, true)
+	self.PhaseObj = KBM.PhaseMonitor.Phase:Create(1)
 	self:DefineMenu()
 end
